correct breadcrumb css and removed coverflow from upload view

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -52,48 +52,34 @@
   $v-gradient: false;
 
   @include valo-button($primary-stylename: breadcrumb-btn) {
-
+  }
+  .breadcrumb-btn {
     &:not(:last-child) {
-        border-right: 0;
+        border-right-width: 0;
+        margin-right: 1px;
     }
 
-
-  }
-  .breadcrumb-btn:focus:after {
+    &:focus:after {
       box-shadow: none !important;
+    }
   }
+
 
   .breadcrumb-btn-spacer {
     $breadcrumb-unit-size: 38px;
 
-    border-left: 0;
+    border-left: 0 !important;
     padding: 0 !important;
     min-width: 0 !important;
-
-
-    &.breadcrumb-btn-friendly:before {
-      border-left: valo-border($border: 10px solid, $color: $v-friendly-color);
-    }
-    &.breadcrumb-btn-friendly:after {
-      border-left: valo-border($border: 10px solid $v-friendly-color);
-    }
-    &.breadcrumb-btn-primary:before {
-      border-left: valo-border($border: 10px solid, $color: $v-selection-color);
-    }
-    &.breadcrumb-btn-primary:after {
-      border-left: valo-border($border: 10px solid $v-selection-color);
-    }
-
-    &:focus:after {
-        box-shadow: none !important;
-    }
 
     &:before {
       position: absolute;
       margin-left: 1px;
+      border-left: valo-border($border: 10px solid, $color: $v-background-color);
     }
     &:after {
-      border-left: 10px solid transparent;
+      //border-left: 10px solid transparent;
+      border-left: valo-border($border: 10px solid $v-background-color);
     }
 
     &:before,
@@ -111,7 +97,29 @@
       display: inline-block !important;
     }
 
-    &.v-disabled {
+    &.breadcrumb-btn-friendly:before {
+      border-left: valo-border($border: 10px solid, $color: $v-friendly-color);
+    }
+    &.breadcrumb-btn-friendly:after {
+      border-left: valo-border($border: 10px solid $v-friendly-color);
+    }
+    &.breadcrumb-btn-primary:before {
+      border-left: valo-border($border: 10px solid, $color: $v-selection-color);
+    }
+    &.breadcrumb-btn-primary:after {
+      border-left: valo-border($border: 10px solid $v-selection-color);
+    }
+
+    &.breadcrumb-btn-friendly ~ .breadcrumb-btn ~ .breadcrumb-btn {
+        border-left-style: hidden;
+    }
+
+    &:focus:after {
+        box-shadow: none !important;
+    }
+
+    &.breadcrumb-btn-primary.v-disabled,
+    &.breadcrumb-btn-friendly.v-disabled {
         opacity: 1 !important;
     }
 
