--- a/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -13819,14 +13819,43 @@ div.v-layout.v-horizontal.v-widget {
 	display: none;
 }
 
+.mytheme .breadcrumb-btn:not(:last-child) {
+	border-right-width: 0;
+	margin-right: 1px;
+}
+
 .mytheme .breadcrumb-btn:focus:after {
 	box-shadow: none !important;
 }
 
 .mytheme .breadcrumb-btn-spacer {
-	border-left: 0;
+	border-left: 0 !important;
 	padding: 0 !important;
 	min-width: 0 !important;
+}
+
+.mytheme .breadcrumb-btn-spacer:before {
+	position: absolute;
+	margin-left: 1px;
+	border-left: 10px solid;
+}
+
+.mytheme .breadcrumb-btn-spacer:after {
+	border-left: 10px solid #fafafa;
+}
+
+.mytheme .breadcrumb-btn-spacer:before, .mytheme .breadcrumb-btn-spacer:after {
+	border-top: 19px solid transparent !important;
+	border-bottom: 19px solid transparent !important;
+	border-right: 0 !important;
+	margin-top: -19px;
+	top: 50%;
+	left: 0%;
+	z-index: 10;
+	height: 0 !important;
+	width: 0 !important;
+	content: "";
+	display: inline-block !important;
 }
 
 .mytheme .breadcrumb-btn-spacer.breadcrumb-btn-friendly:before {
@@ -13845,34 +13874,15 @@ div.v-layout.v-horizontal.v-widget {
 	border-left: 10px solid #197de1;
 }
 
+.mytheme .breadcrumb-btn-spacer.breadcrumb-btn-friendly ~ .breadcrumb-btn ~ .breadcrumb-btn {
+	border-left-style: hidden;
+}
+
 .mytheme .breadcrumb-btn-spacer:focus:after {
 	box-shadow: none !important;
 }
 
-.mytheme .breadcrumb-btn-spacer:before {
-	position: absolute;
-	margin-left: 1px;
-}
-
-.mytheme .breadcrumb-btn-spacer:after {
-	border-left: 10px solid transparent;
-}
-
-.mytheme .breadcrumb-btn-spacer:before, .mytheme .breadcrumb-btn-spacer:after {
-	border-top: 19px solid transparent !important;
-	border-bottom: 19px solid transparent !important;
-	border-right: 0 !important;
-	margin-top: -19px;
-	top: 50%;
-	left: 0%;
-	z-index: 10;
-	height: 0 !important;
-	width: 0 !important;
-	content: "";
-	display: inline-block !important;
-}
-
-.mytheme .breadcrumb-btn-spacer.v-disabled {
+.mytheme .breadcrumb-btn-spacer.breadcrumb-btn-primary.v-disabled, .mytheme .breadcrumb-btn-spacer.breadcrumb-btn-friendly.v-disabled {
 	opacity: 1 !important;
 }
 
